fix oscillator filter problem , remove scrollbars

--- a/app/components/stepper-oscillator/stepper-oscillator.component.css
+++ b/app/components/stepper-oscillator/stepper-oscillator.component.css
@@ -98,8 +98,10 @@
   }
   mat-sidenav-container{
     height: 560px;
+    font-size: 50%;
   }
   mat-sidenav{
+    
     text-align: center;
     min-width: 200px;
     max-width: 200px;
