--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 body{
-    background-image: url('assets/img/purty_wood.png');
+    background-image: url('/assets/img/footer_lodyas.png');
     font-family: 'Dhurjati', sans-serif;
 }
